[gd_scene load_steps=2 format=3 uid="uid://d2vrn38ntsjjr"]

[ext_resource type="Script" uid="uid://bibo07utq3lxp" path="res://scripts/hud.gd" id="1_kw0id"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_kw0id")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 60.0

[node name="LoopCounter" type="Label" parent="Control/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2

[node name="PromptLabel" type="Label" parent="Control/VBoxContainer"]
modulate = Color(0.000113828, 0.000113828, 0.000113828, 1)
layout_mode = 2

[node name="TimerLabel" type="Label" parent="Control/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
